package Representation;

import java.util.List;

public class Interface extends Instance {

    public Interface(String chemin) throws Exception {
        super(chemin);
        //todo
    }

    @Override
    public String toString() {
        //todo
        return null;
    }

}
