package Representation;

import java.lang.reflect.Method;
import java.util.List;

public class Methode{// extends Composante {

    //TODO

    /**
     * Methode retournant le squelette de la methode
     *
     * @return
     */
    public String getSquelette() {
        //todo
        return null;
    }
}
